--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.14.1",
     "react-query": "^2.5.9",
     "sass-loader": "^9.0.2",
+    "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.7",
@@ -45,6 +46,7 @@
     "react-hook-form": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "swr": "^0.3.0"
   }
 }
